# generic-read-buf

./: Cargo.toml
src/: lib.rs  tests.rs
tests/: read_array.rs  read_buf.rs  read_slice.rs  read_vec.rs
